cfn_benchmark/cfn_templates/avalonmediasystem__avalon-aws/templates/securitygroups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Hydra security groups and ingress permissions
Parameters:
  StackName:
    Type: String
    Description: Name of the CloudFormation stack
  VPC:
    Type: AWS::EC2::VPC::Id
    Description: A VPC ID, such as vpc-a123baa3.
Resources:
  DefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Default security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'BastionSecurityGroup'
        IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-default'
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion security group
      VpcId: !Ref 'VPC'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-bastion'
  WebappSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Webapp security group
      VpcId: !Ref 'VPC'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-webapp'
  WebappLbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Webapp load balancer security group
      VpcId: !Ref 'VPC'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-webapp-lb'
  DatabaseClientSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Database client security group
      VpcId: !Ref 'VPC'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-db-client'
  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'FedoraSecurityGroup'
        IpProtocol: tcp
        FromPort: '5432'
        ToPort: '5432'
      - SourceSecurityGroupId: !Ref 'WebappSecurityGroup'
        IpProtocol: tcp
        FromPort: '5432'
        ToPort: '5432'
      - SourceSecurityGroupId: !Ref 'DatabaseClientSecurityGroup'
        IpProtocol: tcp
        FromPort: '5432'
        ToPort: '5432'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-db'
  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Redis security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'WebappSecurityGroup'
        IpProtocol: tcp
        FromPort: '6379'
        ToPort: '6379'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-redis'
  SolrSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Solr security group
      VpcId: !Ref 'VPC'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-solr'
  SolrSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt 'SolrSecurityGroup.GroupId'
      SourceSecurityGroupId: !Ref 'SolrSecurityGroup'
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
  SolrLbSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt 'SolrSecurityGroup.GroupId'
      SourceSecurityGroupId: !Ref 'SolrLbSecurityGroup'
      IpProtocol: tcp
      FromPort: '8983'
      ToPort: '8983'
  SolrLbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Solr load balancer security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'WebappSecurityGroup'
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      - SourceSecurityGroupId: !Ref 'SolrSecurityGroup'
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      - SourceSecurityGroupId: !Ref 'BastionSecurityGroup'
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-solr-lb'
  FedoraSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Fedora security group
      VpcId: !Ref 'VPC'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-fcrepo'
  FedoraLbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Fedora load balancer security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'WebappSecurityGroup'
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      - SourceSecurityGroupId: !Ref 'BastionSecurityGroup'
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-fcrepo-lb'
  ZookeeperLbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Zookeeper load balancer security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'SolrSecurityGroup'
        IpProtocol: tcp
        FromPort: '2181'
        ToPort: '2181'
      - SourceSecurityGroupId: !Ref 'WebappSecurityGroup'
        IpProtocol: tcp
        FromPort: '2181'
        ToPort: '2181'
      - SourceSecurityGroupId: !Ref 'BastionSecurityGroup'
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-zookeeper-lb'
  ZookeeperSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Zookeeper security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref 'ZookeeperLbSecurityGroup'
        IpProtocol: tcp
        FromPort: '2181'
        ToPort: '2181'
      - SourceSecurityGroupId: !Ref 'SolrSecurityGroup'
        IpProtocol: tcp
        FromPort: '2181'
        ToPort: '2181'
      - SourceSecurityGroupId: !Ref 'ZookeeperLbSecurityGroup'
        IpProtocol: tcp
        FromPort: '8181'
        ToPort: '8181'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-zookeeper'
  ZookeeperSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt 'ZookeeperSecurityGroup.GroupId'
      SourceSecurityGroupId: !Ref 'ZookeeperSecurityGroup'
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65535'
  OpenVPNSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: OpenVPN security group
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: '943'
        ToPort: '943'
      - CidrIp: 0.0.0.0/0
        IpProtocol: udp
        FromPort: '1194'
        ToPort: '1194'
      Tags:
      - Key: Name
        Value: !Sub '${StackName}-openvpn'
Outputs:
  Default:
    Description: Security Group ID for the default security group
    Value: !Ref 'DefaultSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Default'
  Bastion:
    Description: Security Group ID for the bastion security group
    Value: !Ref 'BastionSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Bastion'
  Webapp:
    Description: Security Group ID for the webapp security group
    Value: !Ref 'WebappSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Webapp'
  WebappLb:
    Description: Security Group ID for the webapp load balancer security group
    Value: !Ref 'WebappLbSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-WebappLb'
  Fcrepo:
    Description: Security Group ID for the fcrepo security group
    Value: !Ref 'FedoraSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Fcrepo'
  FcrepoLb:
    Description: Security Group ID for the fcrepo load balancersecurity group
    Value: !Ref 'FedoraLbSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-FcrepoLb'
  Solr:
    Description: Security Group ID for the solr security group
    Value: !Ref 'SolrSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Solr'
  SolrLb:
    Description: Security Group ID for the solr load balancer security group
    Value: !Ref 'SolrLbSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-SolrLb'
  Zookeeper:
    Description: Security Group ID for the zookeeper security group
    Value: !Ref 'ZookeeperSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Zookeeper'
  ZookeeperLb:
    Description: Security Group ID for the zookeeper load balancer security group
    Value: !Ref 'ZookeeperLbSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-ZookeeperLb'
  Database:
    Description: Security Group ID for the database security group
    Value: !Ref 'DatabaseSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Database'
  DatabaseClient:
    Description: Security Group ID for the database security group
    Value: !Ref 'DatabaseClientSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-DatabaseClient'
  Redis:
    Description: Security Group ID for the redis security group
    Value: !Ref 'RedisSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-Redis'
  OpenVPN:
    Description: Security Group ID for the openvpn security group
    Value: !Ref 'OpenVPNSecurityGroup'
    Export:
      Name: !Sub '${StackName}-sg-OpenVPN'
